Fix CSS flexbox layout bug on Firefox and restore application logic

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-body, html {
+body {
     background-color: #0d1117;
     margin: 0;
     height: 100vh;
